--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="settings">
+        <button>Change number of squares</button>
+      </div>
+      <div class="right">
+        <div class="drawing"></div>
+      </div>
+    </div>
     <script src="./script.js" defer></script>
   </body>
 </html>
