Added random color brush

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <div class="container">
       <div class="settings">
-        <button>Change number of squares</button>
+        <button class="rainbow">Click for random color</button>
+        <span>Enter desired grid dimension</span>
+        <input type="text" id="userInput" />
+        <button class="board-change">Change number of squares</button>
+        <label for="userInput" id="confirmationLabel"></label>
       </div>
       <div class="right">
         <div class="drawing"></div>
